--- a/03-SOM/source.tex
+++ b/03-SOM/source.tex
@@ -143,12 +143,13 @@ On considère un ensemble d'espaces d'entrée $\mathcal{D}\m{1}, \cdots , \mathc
 Les entrées présentées à une architecture de cartes sont $(\inpx\m{1}_t, \cdots, \inpx\m{n}_t) \in \mathcal{D}\m{1} \times \cdots \times \mathcal{D}\m{n}$. On se place dans un cadre où les distributions des modalités considérées $\inpx\m{i}$ dépendent les unes des autres. 
 Lorsqu'on tire une entrée pour la présenter à une carte, on tire une entrée jointe $\mathbf{\inpx} =  (\inpx\m{1}_t, \cdots , \inpx\m{n}_t)$, dont chaque composante est présentée à la carte qui lui correspond. 
 Le but pour l'architecture de cartes est d'encoder une représentation de chaque espace d'entrée $\mathcal{D}\m{i}$ et d'encoder le schéma de dépendances entre modalités au sein de l'architecture, ce que nous appelerons mémoire associative.
+La figure~\ref{fig:input_3som} présente deux exemples de disposition jouet en 2D et 3D. Les modalités sont chacune des coordonnées, et le but de la mémoire associative est d'apprendre les relations entre modalités, c'est-à-dire détecter qu'elles sont disposées sur un cercle.
 
-% \begin{figure}
-% \centering
-% \includegraphics[width=\textwidth]{inputs_3som}
-% \caption{Exemple de disposition d'entrées en deux dimensions, à gauche, et trois dimensions, à droite. Les modalités associées à différentes cartes sont les coordonnées $x,y$ et $z$ de chaque point. Dans une telle disposition, les modalités dépendent les unes des autres~: développer une mémoire associative signifie apprendre le modèle de relation existant etre $x,y$ et $z$, c'est-à-dire le cercle.\label{fig:input_3som}}
-% \end{figure}
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{inputs_3som}
+\caption{Exemple de disposition d'entrées en deux dimensions, à gauche, et trois dimensions, à droite. Les modalités associées à différentes cartes sont les coordonnées $x,y$ et $z$ de chaque point. Dans une telle disposition, les modalités dépendent les unes des autres~: développer une mémoire associative signifie apprendre le modèle de relation existant etre $x,y$ et $z$, c'est-à-dire le cercle.\label{fig:input_3som}}
+\end{figure}
 
 \subsection{Description de l'architecture}
 
