--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -24,13 +24,11 @@ Nous voulons maintenant étudier les propriétés d'organisation et d'apprentiss
 L'architecture se veut générique. 
 Dans ces travaux, nous avons choisi de nous concentrer sur un cadre spécifique d'apprentissage~: la mémoire associative.
 L'objectif de la mémoire associative pour une architecture de cartes est d'apprendre une représentation des relations existant entre des entrées provenant de différentes modalités, tout en apprenant une représentation de chaque espace d'entrée au sein des cartes.
-L'objectif de cette thèse est alors d'observer comment l'organisation qui émerge au sein des cartes de la structure traduit cet apprentissage associatif.
 
-
-Pour analyser l'apprentissage associatif réalisé par une architecture de cartes, nous avons besoin d'introduire de nouvelles représentations par rapport à celles utilisées pour l'étude des SOM classiques. 
-Ce chapitre présente ces représentations, que nous utiliserons dans les expériences présentées dans la suite de cette thèse.
+Pour analyser cet apprentissage associatif émergeant d'une architecture de cartes, nous avons besoin d'introduire de nouvelles représentations par rapport à celles utilisées pour l'étude des SOM classiques. 
+Ce chapitre élabore des représentations que nous utiliserons dans les expériences présentées dans la suite de cette thèse.
 Elles ont pour but de mettre en évidence l'apprentissage des entrées et des relations entre entrées au sein de l'architecture.
-La création de méthodes de représentation adaptées au modèle CxSOM sur une architecture élémentaire de peu de cartes nous permet de poser des bases pour l'étude de plus grandes architectures, pour une suite à long terme de nos travaux.
+La création de méthodes de représentation adaptées au modèle CxSOM sur une architecture élémentaire de peu de cartes nous permet de poser des bases pour l'étude de plus grandes architectures.
 
 \subsection{Présentation d'une expérience multimodale jouet pour illustrer les représentations}
 
